offlineimap (3.2.1) unstable; urgency=low

  * There is a new "connecting" event that will appear in all but the
    Quiet UIs.  It has a gray color in Blinkenlights.  This event indicates
    the the program is connecting to a remote server.
  * Blinkenlights UI log window is now scrolled and has a new
    config file option "bufferlines" to specify the size of the scroll
    buffer.
  * Make the Blinkenlights window non-resizable.

 -- John Goerzen <jgoerzen@complete.org>  Wed, 24 Jul 2002 17:04:04 -0500

offlineimap (3.2.0) unstable; urgency=low

  * New BLINKENLIGHTS interface!  Mesmerising, isn't it?
  * New ui.Tk.Blinkenlights section in offlineimap.conf.
  * New USER INTERFACES section in the manual.
  * TTYUI isusable() now checks to see if stdout and stdin are TTYs.
  * Added build-dependency on python2.2-dev.  Closes: #154167.

 -- John Goerzen <jgoerzen@complete.org>  Wed, 24 Jul 2002 17:53:20 -0500

offlineimap (3.1.1) unstable; urgency=low

  * Modified imaputil.py and folder/Maildir.py to run faster.  Eliminated
    many regular expressions; pre-compiled many others.
  * Fixed threadutil's exitnotifyloop to always handle threads in the order
    they exited, rather than sometimes in the inverse order.  This way,
    make sure to handle thread's exception messages before a thread exited.
  * Replaced imaplib.py's braindead readline() with a more efficient one.
  * More optimizations to imaputil and folders for faster operation.
  * These optimizations, all together, have resulted in OfflineIMAP
    using approximately half the CPU time of previous versions, fixing
    [complete.org #6], and... Closes: #153503.

 -- John Goerzen <jgoerzen@complete.org>  Wed, 24 Jul 2002 06:53:16 -0500

offlineimap (3.1.0) unstable; urgency=low

  * When uploading messages from a Maildir, now convert \r\n to \n in case
    the message is stored weirdly.  That way, everything is uniform.
    Fixes [complete.org #11].